k8s_activemq.yaml
apiVersion: v1
kind: Service
metadata:
  name: servico-activemq
spec:
  type: LoadBalancer
  ports:
    - port: 8161
      name: ui
    - port: 61613
      name: tcp
    - port: 61616
      name: tcp
      nodePort: 31000
    - port: 8080
      name: http
      nodePort: 31100
    - port: 8081
      name: tls
  selector:
    name: activemq-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activemq-deployment
spec:
  selector:
    matchLabels:
      name: activemq-pod
  template:
    metadata:
      labels:
        name: activemq-pod
    spec:
      containers:
        - name: container-activemq
          image: douglassouza93/activemq-http:v2
          ports:
            - containerPort: 8080
            - containerPort: 8081
            - containerPort: 8161
            - containerPort: 61616
            - containerPort: 61613
