k8s_registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  labels:
    app: registry
spec:
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30400
      name: registry
  selector:
    app: registry
    tier: registry
  type: NodePort
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: registry-ui
#   labels:
#     app: registry
# spec:
#   ports:
#     - port: 8080
#       targetPort: 8080
#       nodePort: 30401
#       name: registry
#   selector:
#     app: registry
#     tier: registry
#   type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  labels:
    app: registry
spec:
  selector:
    matchLabels:
      app: registry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registry
        tier: registry
    spec:
      containers:
      - image: registry
        name: registry
        volumeMounts:
        - name: docker
          mountPath: /var/run/docker.sock
        - name: registry-persistent-storage
          mountPath: /var/lib/registry
        ports:
        - containerPort: 5000
          name: registry
      # - name: registryui
      #   image: hyper/docker-registry-web
      #   ports:
      #   - containerPort: 8080
      #   env:
      #   - name: REGISTRY_URL
      #     value: http://localhost:5000/v2
      #   - name: REGISTRY_NAME
      #     value: cluster-registry
      volumes:
      - name: docker
        hostPath:
          path: /var/run/docker.sock
      - name: registry-persistent-storage
        persistentVolumeClaim:
          claimName: registry-claim
