k8s_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: uaicontrole-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.org/client-max-body-size: "50m"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   proxy_http_version 1.1;
    #   proxy_set_header Upgrade "websocket";
    #   proxy_set_header Connection "Upgrade";
spec:
#   backend:
#     serviceName: servico-uaigateway
#     servicePort: 5555
  rules:
  - host: teste-case
    http:
      paths:
      - backend:
          serviceName: servico-uaigateway
          servicePort: 5555
  - host: uaicontroleteste.ddns.net
    http:
      paths:
      - backend:
          serviceName: servico-uaigateway
          servicePort: 5555
  - host: uaicontrolejenkins.ddns.net
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
  - host: uaicontroledelivery.ddns.net
    http:
      paths:
      - backend:
          serviceName: servico-uaidelivery
          servicePort: 8081
  - host: uaicontroleactivemq.ddns.net
    http:
      paths:
      - backend:
          serviceName: servico-activemq
          servicePort: 8080
